samples/_failures_safe/1761599635_88827d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ff931bd.c: In function ‘main’:
./samples/SAFE/__tmp_7ff931bd.c:200:9: error: expected expression at end of input
  200 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_7ff931bd.c:200:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7ff931bd.c:200:9: error: expected declaration or statement at end of input
